# horseflow

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  jc2-72108-reduced.yml  jc2-72108-unit-cert-replay.yml
clients/linux/: client.env.example  horseflow.service  horseflow_ptt.py  install.sh  requirements.txt  uninstall.sh
clients/macos/: Horseflow.m  Info.plist  Makefile  install.sh  uninstall.sh
deploy/: .env.example  compose.yaml
docs/: architecture.md  tailscale.md  troubleshooting.md
jc2-72108/: model_linear_edge.py  model_linear_reduced.py  model_linear_reduced_rational.py
jc2-72108-ci/: README.md  certs.b64.00  certs.b64.01  certs.b64.02  certs.b64.03  ci-trigger.txt
server/: Dockerfile
server/horseflow_server/: __init__.py  app.py  audio.py  config.py  prompts.py
tests/: test_server.py
